# LinuxKernel_Note

./: README.md
HowToBuildViaCMake/: CMakeLists.txt  my_kernel_module.c
HowToTriggerInterrupt/: README.md
KernelModuleDriver/: README.md
